Fixed header script

--- a/www/index.html
+++ b/www/index.html
@@ -53,9 +53,9 @@
       </ul>
 </nav>
 
-<div class="content-wrap">
+<div class="content-wrap" style=" height: 100%;  overflow: hidden; overflow-y: scroll;"  data-bind="event : { scroll : pageScrolled}">
 
-    <main class="content-main" data-bind="event : { scroll : xxxxxxpageScrolled}">
+    <main class="content-main">
 
         <div class="sub-header" data-bind="css : {'is-fixed' : subHeadFixed}">
             <ul class="sub-header-nav">
@@ -252,6 +252,7 @@
             <div class="section__wrap">
                 <div class="cols">
                     <h1>cols</h1>
+                    <p>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
                 </div>
 
                 <div class="cols">
